<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/fechaParteIdLayout"
        android:baselineAligned="false"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fechaTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:layout_marginEnd="20dp"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_calendar"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fechaEditText"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:hint="@string/hint_fecha"
                android:textSize="16sp"
                android:nextFocusForward="@id/equipoAutocomplete"
                android:imeOptions="actionNext"
                android:focusableInTouchMode="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/parteDiarioIdTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/parteDiarioIdTextView"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:hint=""
                android:inputType="number"
                android:textSize="16sp"
                android:enabled="false"
                android:gravity="end" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/equipoTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fechaParteIdLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <AutoCompleteTextView
            android:id="@+id/equipoAutocomplete"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:hint="@string/hint_equipo"
            android:completionThreshold="1"
            android:padding="16dp"
            android:textSize="16sp"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:nextFocusForward="@id/obraAutocomplete" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/obraTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/equipoTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <AutoCompleteTextView
            android:id="@+id/obraAutocomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_obra"
            android:completionThreshold="1"
            android:padding="16dp"
            android:textSize="16sp"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:nextFocusForward="@id/horasInicioEditText" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/horasLayout"
        android:baselineAligned="false"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/obraTextInputLayout">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/horasInicioTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:layout_marginEnd="6dp"
            android:nextFocusForward="@id/horasFinEditText"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/horasInicioEditText"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:hint="@string/hint_horas_inicio"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:gravity="end" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/horasFinTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:layout_marginEnd="6dp"
            android:nextFocusForward="@id/observacionesEditText"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/horasFinEditText"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:hint="@string/hint_horas_fin"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:gravity="end" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/horasTrabajadasTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/horasTrabajadasEditText"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:hint="@string/hint_horas_trabajadas"
                android:inputType="number"
                android:gravity="end"
                android:enabled="false" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/observacionesTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horasLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/observacionesEditText"
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:gravity="top|start"
            android:hint="@string/hint_observaciones"
            android:inputType="textMultiLine"
            android:maxLength="200"
            android:padding="16dp"
            android:scrollbars="vertical"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/guardarButton"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:text="@string/button_guardar"
        android:textAllCaps="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/button_primary_background"
        android:textColor="@color/button_primary_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/observacionesTextInputLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ultimoParteLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        android:background="@color/success_400"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guardarButton">

        <!-- Título indicando "Último Parte Diario" -->
        <TextView
            android:id="@+id/ultimoParteTituloTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Ultimo Parte Diario"
            android:textAllCaps="true"
            android:textSize="15dp"
            android:textColor="@color/light_500"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Fecha -->
        <TextView
            android:id="@+id/ultimoParteFechaTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Fecha:"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/ultimoParteHorasInicioTextView"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ultimoParteTituloTextView" />

        <!-- Horas Inicio -->
        <TextView
            android:id="@+id/ultimoParteHorasInicioTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Horas Inicio: 0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ultimoParteTituloTextView" />

        <!-- Equipo -->
        <TextView
            android:id="@+id/ultimoParteEquipoTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Equipo: "
            app:layout_constraintEnd_toStartOf="@id/ultimoParteHorasFinTextView"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ultimoParteFechaTextView" />

        <!-- Horas Fin -->
        <TextView
            android:id="@+id/ultimoParteHorasFinTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Horas Fin: 0"
            app:layout_constraintEnd_toEndOf="@+id/ultimoParteHorasInicioTextView"
            app:layout_constraintTop_toBottomOf="@id/ultimoParteHorasInicioTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/horizontalConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:paddingStart="8dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ultimoParteLayout">

        <TextView
            android:id="@+id/tituloHistorialPartesTextView"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:paddingStart="0dp"
            android:paddingBottom="8dp"
            android:gravity="bottom"
            android:textSize="15dp"
            android:text="Histrorial de Partes por Usuario"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Mensaje en caso de que no haya partes simples disponibles -->
    <TextView
        android:id="@+id/emptyListMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="No hay partes en el historial"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ultimoParteLayout"
        app:layout_constraintVertical_bias="0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listaPartesDiariosRecyclerView"
        android:layout_width="0dp"
        android:layout_height="00dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="16dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/ultimoParteLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>